--- a/WpfApp2/App.xaml
+++ b/WpfApp2/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="WpfApp2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/MainWindow.xaml">
     <Application.Resources>
         <Style TargetType="{x:Type Label}">
             <Setter Property="FontSize" Value="12" />
