--- a/WpfApp3/App.xaml
+++ b/WpfApp3/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="WpfApp3.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="SlashWindow.xaml">
+             StartupUri="Views/SlashWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
