--- a/WpfApp3/Views/UdpWindow.xaml
+++ b/WpfApp3/Views/UdpWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApp3.UdpWindow"
+﻿<Window x:Class="WpfApp3.Views.UdpWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
