--- a/WpfApp4/Views/MainWindow.xaml
+++ b/WpfApp4/Views/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WpfApp4.MainWindow"
+﻿<Window x:Class="WpfApp4.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewModel="clr-namespace:WpfApp4.ViewModel"
+        xmlns:viewModels="clr-namespace:WpfApp4.ViewModels"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance viewModel:MainViewModel, IsDesignTimeCreatable=True}"
+        d:DataContext="{d:DesignInstance viewModels:MainViewModel, IsDesignTimeCreatable=True}"
         Title="MainWindow" Height="350" Width="525">
     <Border BorderBrush="#2e6da4" BorderThickness="3">
         <Grid>
