--- a/WpfApp7/Views/PrintPreviewWindow.xaml
+++ b/WpfApp7/Views/PrintPreviewWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApp7.PrintPreviewWindow"
+﻿<Window x:Class="WpfApp7.Views.PrintPreviewWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="打印预览窗口" Height="736" Width="882"
