--- a/WpfApp8/Views/MainWindow.xaml
+++ b/WpfApp8/Views/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:control="clr-namespace:WpfApp8.Control"
         xmlns:vm="clr-namespace:WpfApp8.ViewModels;assembly=WpfApp8"
+        xmlns:ui="http://schemas.modernwpf.com/2019"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance vm:MainViewModel, IsDesignTimeCreatable=True}"
+        ui:WindowHelper.UseModernWindowStyle="True"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Popup x:Name="PopTest" PopupAnimation="Fade" PlacementTarget="{Binding ElementName=BtnTest}"
@@ -49,8 +51,42 @@
             </Border>
         </Popup>
 
+        <UniformGrid Columns="5" Height="200" Width="500" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Border BorderThickness="1">
+                <TextBlock Text="{Binding TxtConnect}" />
+            </Border>
+            <Border BorderThickness="1">
+                <TextBlock Text="{Binding TxtNetwork}" />
+            </Border>
+            <Border BorderThickness="1">
+                <TextBlock Text="{Binding TxtSettings}" />
+            </Border>
+            <Border BorderThickness="1">
+                <TextBlock Text="{Binding TxtAirplane}" />
+            </Border>
+            <Border BorderThickness="1">
+                <TextBlock Text="{Binding TxtLocate}" />
+            </Border>
+
+            <Border BorderThickness="1">
+                <TextBlock Text="{Binding TextInFocus}" />
+            </Border>
+            <Border BorderThickness="1">
+                <TextBlock Text="{Binding TextHotpot}" />
+            </Border>
+            <Border BorderThickness="1">
+                <TextBlock Text="{Binding TextNightMode}" />
+            </Border>
+            <Border BorderThickness="1">
+                <TextBlock Text="{Binding TextBluetooth}" />
+            </Border>
+            <Border BorderThickness="1">
+                <TextBlock Text="{Binding TextProject}" />
+            </Border>
+        </UniformGrid>
+        
         <!-- 状态栏 -->
-        <Grid x:Name="MyStatusBar" VerticalAlignment="Bottom" Margin="0,0,0,0" Background="DimGray">
+        <Grid x:Name="MyStatusBar" VerticalAlignment="Bottom" Margin="0,0,0,0" Background="DarkSlateBlue">
             <WrapPanel HorizontalAlignment="Right" VerticalAlignment="Center" Height="35">
                 <Button x:Name="BtnTest" Content="别点我" VerticalAlignment="Center" Height="35" />
             </WrapPanel>
