--- a/WpfApp8/App.xaml
+++ b/WpfApp8/App.xaml
@@ -9,6 +9,7 @@
                 <ui:ThemeResources />
                 <ui:XamlControlsResources />
                 <ResourceDictionary Source="Style/Colors.xaml" />
+                <ResourceDictionary Source="Image/Icons.xaml" />
                 <ResourceDictionary Source="Control/MetroButton.xaml" />
                 <ResourceDictionary Source="Control/MetroCheckBox.xaml" />
             </ResourceDictionary.MergedDictionaries>
