--- a/WpfApp8/Control/MetroButton.xaml
+++ b/WpfApp8/Control/MetroButton.xaml
@@ -1,24 +1,23 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:control="clr-namespace:WpfApp8.Control">
+                    xmlns:control1="clr-namespace:WpfApp8.Control">
 
-    <Style TargetType="{x:Type control:MetroButton}" x:Key="MetroButtonStyle">
+    <Style TargetType="{x:Type control1:MetroButton}" x:Key="MetroButtonStyle">
         <!--设置按钮的默认的样式-->
-        <Setter Property="Height" Value="80" />
-        <Setter Property="Width" Value="80" />
-        <Setter Property="Foreground" Value="White" />
-        <Setter Property="Background" Value="{StaticResource ColorBackgroundRect}" />
+        <Setter Property="Height" Value="79" />
+        <Setter Property="Width" Value="79" />
+        <Setter Property="Foreground" Value="{DynamicResource SystemControlForegroundBaseHighBrush}" />
         <!--设置按钮的模板-->
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="control:MetroButton">
-                    <Border x:Name="PART_BORD" BorderThickness="1" BorderBrush="{StaticResource BrushBackgroundRect}">
+                <ControlTemplate TargetType="control1:MetroButton">
+                    <Border x:Name="PART_BORD" BorderThickness="1">
                         <Grid>
-                            <Rectangle x:Name="PART_BACK" Fill="{StaticResource BrushBackgroundRect}" />
-                            <Image Source="{TemplateBinding Icon}" Height="20" Width="20"
-                                   Margin="5,5,0,0"
-                                   HorizontalAlignment="Left"
-                                   VerticalAlignment="Top" />
+                            <Rectangle x:Name="PART_BACK" Fill="{DynamicResource SystemControlBackgroundBaseLowBrush}" />
+                            <Path Data="{TemplateBinding Icon}" Height="24" Width="24"
+                                  Margin="5,5,0,0" Fill="{DynamicResource SystemControlForegroundBaseHighBrush}"
+                                  HorizontalAlignment="Left"
+                                  VerticalAlignment="Top" />
                             <ContentPresenter
                                 Margin="5,0,5,5"
                                 HorizontalAlignment="Left"
@@ -29,29 +28,19 @@
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Opacity" Value="0.8" />
+                            <Setter TargetName="PART_BORD" Property="BorderBrush"
+                                    Value="{DynamicResource SystemControlBackgroundBaseMediumBrush}" />
+                            <Setter TargetName="PART_BACK" Property="Fill"
+                                    Value="{DynamicResource SystemControlBackgroundBaseLowBrush}" />
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="False">
+                            <Setter Property="Opacity" Value="1.0" />
+                            <Setter TargetName="PART_BACK" Property="Fill"
+                                    Value="{DynamicResource SystemControlBackgroundBaseLowBrush}" />
                         </Trigger>
                         <Trigger Property="IsPressed" Value="True">
                             <Setter Property="Opacity" Value="0.9" />
                         </Trigger>
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="IsPressed" Value="true" />
-                                <Condition Property="IsMouseOver" Value="true" />
-                            </MultiTrigger.Conditions>
-                            <Setter TargetName="PART_BORD" Property="BorderBrush"
-                                    Value="{StaticResource BorderBrushMouseOver}" />
-                            <Setter TargetName="PART_BACK" Property="Fill"
-                                    Value="{StaticResource BrushBackgroundRectMouseOver}" />
-                        </MultiTrigger>
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="IsPressed" Value="false" />
-                                <Condition Property="IsMouseOver" Value="true" />
-                            </MultiTrigger.Conditions>
-                            <Setter TargetName="PART_BORD" Property="BorderBrush"
-                                    Value="{StaticResource BorderBrushMouseOver}" />
-                            <Setter TargetName="PART_BACK" Property="Fill" Value="{StaticResource BrushBackgroundRect}" />
-                        </MultiTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
