--- a/WpfApp8/Control/MetroCheckBox.xaml
+++ b/WpfApp8/Control/MetroCheckBox.xaml
@@ -1,28 +1,29 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:control="clr-namespace:WpfApp8.Control">
+                    xmlns:control1="clr-namespace:WpfApp8.Control">
 
     <Style TargetType="{x:Type TextBlock}" x:Key="WrappingStyle">
         <Setter Property="TextWrapping" Value="Wrap" />
     </Style>
 
-    <Style TargetType="{x:Type control:MetroCheckBox}" x:Key="MetroCheckBoxStyle">
+    <Style TargetType="{x:Type control1:MetroCheckBox}" x:Key="MetroCheckBoxStyle">
         <!--设置按钮的默认的样式-->
-        <Setter Property="Height" Value="80" />
-        <Setter Property="Width" Value="80" />
-        <Setter Property="Foreground" Value="White" />
-        <Setter Property="Background" Value="{StaticResource ColorBackgroundRect}" />
+        <Setter Property="Height" Value="79" />
+        <Setter Property="Width" Value="79" />
+        <!-- SystemControlForegroundBaseHighBrush就是这个 -->
+        <Setter Property="Foreground" Value="{DynamicResource SystemControlForegroundBaseHighBrush}" />
         <!--设置按钮的模板-->
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="control:MetroCheckBox">
-                    <Border x:Name="PART_BORD" BorderThickness="1" BorderBrush="{StaticResource BrushBackgroundRect}">
+                <ControlTemplate TargetType="control1:MetroCheckBox">
+                    <Border x:Name="PART_Bord" BorderThickness="1">
                         <Grid>
-                            <Rectangle x:Name="PART_BACK" Fill="{StaticResource BrushBackgroundRect}" />
-                            <Image Source="{TemplateBinding Icon}" Height="20" Width="20"
-                                   Margin="5,5,0,0"
-                                   HorizontalAlignment="Left"
-                                   VerticalAlignment="Top" />
+                            <Rectangle x:Name="PART_Back" Fill="{DynamicResource SystemControlBackgroundAltHighBrush}" />
+                            <Path x:Name="PART_Icon" Data="{TemplateBinding Icon}" Height="24" Width="24"
+                                  Margin="5,5,0,0"
+                                  HorizontalAlignment="Left"
+                                  VerticalAlignment="Top"
+                                  Fill="{DynamicResource SystemControlForegroundBaseHighBrush}" />
                             <ContentPresenter
                                 Margin="5,0,5,5"
                                 HorizontalAlignment="Left"
@@ -42,27 +43,40 @@
                             <Setter Property="Opacity" Value="0.9" />
                         </Trigger>
                         <Trigger Property="IsChecked" Value="True">
-                            <Setter TargetName="PART_BORD" Property="BorderBrush"
-                                    Value="{StaticResource BorderBrushChecked}" />
-                            <Setter TargetName="PART_BACK" Property="Fill"
-                                    Value="{StaticResource BrushBackgroundRectChecked}" />
+                            <!-- 选中状态字体颜色固定为浅色白色 -->
+                            <Setter Property="Foreground"
+                                    Value="{DynamicResource SystemControlForegroundChromeWhiteBrush}" />
+                            <Setter TargetName="PART_Icon" Property="Fill"
+                                    Value="{DynamicResource SystemControlForegroundChromeWhiteBrush}" />
+                            <Setter TargetName="PART_Bord" Property="BorderBrush"
+                                    Value="{DynamicResource SystemControlBackgroundAccentBrush}" />
+                            <Setter TargetName="PART_Back" Property="Fill"
+                                    Value="{DynamicResource SystemControlBackgroundAccentBrush}" />
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="False">
+                            <!-- 非选中状态字体颜色随系统主题变化 -->
+                            <Setter Property="Foreground"
+                                    Value="{DynamicResource SystemControlForegroundBaseHighBrush}" />
+                            <Setter TargetName="PART_Icon" Property="Fill"
+                                    Value="{DynamicResource SystemControlForegroundBaseHighBrush}" />
+                            <Setter TargetName="PART_Back" Property="Fill"
+                                    Value="{DynamicResource SystemControlBackgroundBaseLowBrush}" />
                         </Trigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
-                                <Condition Property="IsChecked" Value="true" />
-                                <Condition Property="IsMouseOver" Value="true" />
+                                <Condition Property="IsChecked" Value="True" />
+                                <Condition Property="IsMouseOver" Value="True" />
                             </MultiTrigger.Conditions>
-                            <Setter TargetName="PART_BORD" Property="BorderBrush"
-                                    Value="{StaticResource BorderBrushMouseOver}" />
+                            <Setter TargetName="PART_Bord" Property="BorderBrush"
+                                    Value="{DynamicResource SystemControlTransparentBrush}" />
                         </MultiTrigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
-                                <Condition Property="IsChecked" Value="false" />
-                                <Condition Property="IsMouseOver" Value="true" />
+                                <Condition Property="IsChecked" Value="False" />
+                                <Condition Property="IsMouseOver" Value="True" />
                             </MultiTrigger.Conditions>
-                            <Setter TargetName="PART_BORD" Property="BorderBrush"
-                                    Value="{StaticResource BorderBrushMouseOver}" />
-                            <Setter TargetName="PART_BACK" Property="Fill" Value="{StaticResource BrushBackgroundRect}" />
+                            <Setter TargetName="PART_Bord" Property="BorderBrush"
+                                    Value="{DynamicResource SystemControlBackgroundBaseMediumBrush}" />
                         </MultiTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
