WpfApp8: 增加IconButton用于实现ToolBar

--- a/WpfApp8/App.xaml
+++ b/WpfApp8/App.xaml
@@ -12,6 +12,7 @@
                 <ResourceDictionary Source="Image/Icons.xaml" />
                 <ResourceDictionary Source="Control/MetroButton.xaml" />
                 <ResourceDictionary Source="Control/MetroCheckBox.xaml" />
+                <ResourceDictionary Source="Control/IconButton.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
