--- a/WpfApp8/Control/IconCheckBox.xaml
+++ b/WpfApp8/Control/IconCheckBox.xaml
@@ -1,12 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:control="clr-namespace:WpfApp8.Control">
+
     <Style TargetType="{x:Type TextBlock}" x:Key="PresenterStyle">
         <Setter Property="FontSize" Value="12" />
         <Setter Property="TextWrapping" Value="Wrap" />
     </Style>
 
-    <Style TargetType="{x:Type control:IconButton}" x:Key="ImageButtonStyle">
+    <Style TargetType="{x:Type control:IconCheckBox}" x:Key="IconCheckBoxStyle">
         <!--设置按钮的默认的样式-->
         <Setter Property="Height" Value="60" />
         <Setter Property="Width" Value="60" />
@@ -15,7 +16,7 @@
         <!--设置按钮的模板-->
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="control:IconButton">
+                <ControlTemplate TargetType="control:IconCheckBox">
                     <Border x:Name="PART_Bord" BorderThickness="1" BorderBrush="Transparent">
                         <Grid>
                             <Rectangle x:Name="PART_Back" Fill="Transparent" />
@@ -24,7 +25,7 @@
                                     <RowDefinition Height="3*" />
                                     <RowDefinition Height="2*" />
                                 </Grid.RowDefinitions>
-                                <Path Data="{TemplateBinding Icon}"
+                                <Path x:Name="PART_Icon" Data="{TemplateBinding Icon}"
                                       Fill="{DynamicResource SystemControlForegroundChromeWhiteBrush}"
                                       HorizontalAlignment="Center" VerticalAlignment="Center"
                                       Grid.Row="0" />
@@ -46,12 +47,15 @@
                             <Setter TargetName="PART_Bord" Property="BorderBrush"
                                     Value="{DynamicResource SystemControlForegroundChromeWhiteBrush}" />
                         </Trigger>
-                        <Trigger Property="IsMouseOver" Value="False">
-                            <Setter Property="Opacity" Value="1.0" />
-                            <Setter TargetName="PART_Bord" Property="BorderBrush" Value="Transparent" />
-                        </Trigger>
                         <Trigger Property="IsPressed" Value="True">
                             <Setter Property="Opacity" Value="0.9" />
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter TargetName="PART_Back" Property="Fill"
+                                    Value="{DynamicResource SystemControlBackgroundAccentBrush}" />
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="False">
+                            <Setter TargetName="PART_Back" Property="Fill" Value="Transparent" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
