--- a/WpfApp8/Control/MetroCheckBox.xaml
+++ b/WpfApp8/Control/MetroCheckBox.xaml
@@ -1,12 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:control1="clr-namespace:WpfApp8.Control">
+                    xmlns:control="clr-namespace:WpfApp8.Control">
 
     <Style TargetType="{x:Type TextBlock}" x:Key="WrappingStyle">
         <Setter Property="TextWrapping" Value="Wrap" />
     </Style>
 
-    <Style TargetType="{x:Type control1:MetroCheckBox}" x:Key="MetroCheckBoxStyle">
+    <Style TargetType="{x:Type control:MetroCheckBox}" x:Key="MetroCheckBoxStyle">
         <!--设置按钮的默认的样式-->
         <Setter Property="Height" Value="79" />
         <Setter Property="Width" Value="79" />
@@ -15,7 +15,7 @@
         <!--设置按钮的模板-->
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="control1:MetroCheckBox">
+                <ControlTemplate TargetType="control:MetroCheckBox">
                     <Border x:Name="PART_Bord" BorderThickness="1">
                         <Grid>
                             <Rectangle x:Name="PART_Back" Fill="{DynamicResource SystemControlBackgroundAltHighBrush}" />
